# accessible-juce-app-adc-23

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENCE-MIT.txt  README.md  cpm.cmake
docs/: presentation.html  presentation.md
src/: Application.cpp  Application.h  Button.cpp  Button.h  LookAndFeel.cpp  LookAndFeel.h  MainContent.cpp  MainContent.h  main.cpp
src/channel-strip/: ChannelStrip.cpp  ChannelStrip.h  ChannelStripGroup.cpp  ChannelStripGroup.h
src/utilities/: ExplicitFocusOrder.h  FocusLogger.h
